--- a/css/cleanup.css
+++ b/css/cleanup.css
@@ -1,1 +1,30 @@
 /* write your override styles here */
+#wall .tag-1{
+    display:none;
+}
+#wall + #tag-2{
+    display: none;
+}
+
+#tag-3 .slick wicked {
+    display: none;
+}
+
+#parent .tag-4{
+    display: none;
+}
+
+.parent + #tag-5{
+    display: block;
+}
+
+.parent{
+    display: block;
+}
+
+#parent .tag-6{
+    display: block;
+}
+#parent + .tag-7{
+    display: block;
+}
